<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".PlayGameMulti">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtScore"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtScoreNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtScoreNum"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtLife"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLifeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtLifeNum"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtTime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTimeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtTimerNum"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="YourQuestion"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edAnswer"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/edAnswer"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/btnOK" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/btnNext" />
    </LinearLayout>

</LinearLayout>